@@ -48,6 +48,7 @@ CHANGE: Core | Socket writes now done in full MSS-sized chunks [Nolar]
 CHANGE: Core | Upload limit can now be set less than 5KB/sec. However, doing so limits download speed too [Parg]
 CHANGE: Core | User config/pref/plugins dir culled from Windows' Registry (needs aereg.dll) [Parg]
 CHANGE: Core | OSX user- pref/plugin dir moved from ~/Library/Azureus/ to ~/Library/Application Support/Azureus/ to meet osx standards [Nolar]
+CHANGE: Core | Unix user- pref/plugin dir moved from ~/Azureus/ to ~/.Azureus/ to meet unix standards [Nolar]
 CHANGE: UI   | All progress/piece bars re-done (again) [TuxPaper]
 CHANGE: UI   | Azureus should work with SWT 2.12 until we break backwards compat. again [TuxPaper]
 CHANGE: UI   | Shrink "My Torrents" Context menu [TuxPaper]
@@ -62,7 +63,7 @@ BUGFIX: Core | First Priority rules based on time now work across sessions [TuxP
 BUGFIX: Core | Fix for saving of .torrent file in wrong dir: Bug #916137 [Nolar]
 BUGFIX: Core | Fix for some discarded data due to occasional duplicate request [Nolar]
 BUGFIX: Core | Fix for system clock changes stalling downloads: Bug #918193 [Nolar]
-BUGFIX: Core | Fix for clock being faster when using Azureus [Nolar]
+BUGFIX: Core | Fix for system clock running faster when using Azureus [Nolar]
 BUGFIX: Core | Fix for underlying socket handles not closing under linux ("Too many open files") [Nolar]
 BUGFIX: Core | Individual file priorities remembered after Stop-Start [Nolar]
 BUGFIX: Core | Multiple shares of same resources causing problems (e.g. share contents+share contents recursive of same dir) [Parg]
